==> zlgopen/ametal/soc/hdsc/drivers/source/spi/am_hc32_spi_dma.c <==
#include "ametal.h"
#include "am_int.h"
#include "am_gpio.h"
#include "am_clk.h"
#include "am_hc32_dma.h"
#include "hc32_dma_chan.h"
#include "hc32_regbase.h"
#include "hw/amhw_hc32_spi.h"
#include "am_hc32_spi_dma.h"
#define __SPI_FRQIIN_GET(p_hw_spi)    \
    am_clk_rate_get(p_this->p_devinfo->clk_id)
#define __SPI_MAXSPEED_GET(p_hw_spi)  \
    ((uint32_t)(__SPI_FRQIIN_GET(p_hw_spi) / 2))
#define __SPI_MINSPEED_GET(p_hw_spi)  \
    ((uint32_t)(__SPI_FRQIIN_GET(p_hw_spi) / 128))
#define __SPI_ST_IDLE               0                   /**< \brief空闲状态 */
#define __SPI_ST_MSG_START          1                   /**< \brief消息开始 */
#define __SPI_ST_TRANS_START        2                   /**< \brief传输开始 */
#define __SPI_ST_DMA_TRANS_DATA     3                   /**< \briefDMA 传输 */
#define __SPI_EVT_NUM_GET(event)    ((event) & 0xFFFF)
#define __SPI_EVT_PAR_GET(event)    ((event >> 16) & 0xFFFF)
#define __SPI_EVT(evt_num, evt_par) (((evt_num) & 0xFFFF) | ((evt_par) << 16))
#define __SPI_EVT_NONE              __SPI_EVT(0, 0)     /**< \brief 无事件 */
#define __SPI_EVT_TRANS_LAUNCH      __SPI_EVT(1, 0)     /**< \brief 传输就绪 */
#define __SPI_EVT_DMA_TRANS_DATA    __SPI_EVT(2, 0)     /**< \brief DMA传输数据 */

am_local
int __spi_hard_init (am_hc32_spi_dma_dev_t *p_this)
{
    amhw_hc32_spi_t *p_hw_spi = (amhw_hc32_spi_t *)(p_this->p_devinfo->spi_reg_base);

    if (p_this == NULL) {
        return -AM_EINVAL;
    }

    /* 配置为主机模式 */
    amhw_hc32_spi_mode_sel(p_hw_spi, AMHW_HC32_SPI_MODE_TYPE_MASTER);

    /* SPI使能 */
    amhw_hc32_spi_enable(p_hw_spi, AM_TRUE);

    /* 初始化配置SPI */
    return AM_OK;
}

am_local
void __dma_isr (void *p_arg, uint32_t stat)
{
    am_hc32_spi_dma_dev_t *p_this   = (am_hc32_spi_dma_dev_t *)p_arg;
    amhw_hc32_spi_t       *p_hw_spi = (amhw_hc32_spi_t *)(p_this->p_devinfo->spi_reg_base);


    /* 中断发生 */
    if (stat == AM_HC32_DMA_INT_COMPLETE)
    {
        /* 记录成功传送字节数 */
        if (p_this->p_cur_trans->p_txbuf != NULL) {
            p_this->p_cur_msg->actual_length += (p_this->p_cur_trans->nbytes)
                            *(p_this->p_cur_spi_dev->bits_per_word < 9 ? 1 : 2);
        }

        if ((p_this != NULL) &&
            (p_this->p_isr_msg != NULL) &&
            (p_this->p_isr_msg->pfn_complete != NULL)) {
            p_this->p_isr_msg->pfn_complete(p_this->p_isr_msg->p_arg);
        }

        p_this->busy = AM_FALSE;

        /* 传输就绪 */
        __spi_mst_sm_event(p_this, __SPI_EVT_TRANS_LAUNCH);

    } else {
        /* 中断源不匹配 */
    }
}

am_local
int __spi_dma_trans (am_hc32_spi_dma_dev_t *p_dev)
{
    am_hc32_spi_dma_dev_t           *p_this      = (am_hc32_spi_dma_dev_t *)p_dev;
    const am_hc32_spi_dma_devinfo_t *p_devinfo   = p_this->p_devinfo;
    amhw_hc32_spi_t                 *p_hw_spi    = (amhw_hc32_spi_t *)(p_devinfo->spi_reg_base);
    am_spi_transfer_t                 *p_cur_trans = p_dev->p_cur_trans;

    static uint16_t tx_rx_trans = 0; 
    uint32_t   dma_flags[2]     = {0};  /* DMA发送通道描述符 */

    /* 连接DMA中断服务函数 */
    am_hc32_dma_isr_connect(p_this->p_devinfo->dma_chan_tx,
                           __dma_isr, 
                           (void *)p_this);

    /* DMA发送通道配置 */
    dma_flags[0] = AMHW_HC32_DMA_CHAN_TRANSFER_MODE_BLOCK    | /* SPI只有块传输模式 */
                   AMHW_HC32_DMA_CHAN_SIZE_8BIT              | /* 数据位宽 8bit */

                   AMHW_HC32_DMA_CHAN_RELOAD_SRC_ADD_DISABLE | /* 源地址不重载*/

                   AMHW_HC32_DMA_CHAN_DST_ADD_INC_DISABLE    | /* 目标地址不自增 */
                   AMHW_HC32_DMA_CHAN_RELOAD_DST_ADD_ENABLE  | /* 目标地址重载 */

                   AMHW_HC32_DMA_CHAN_RELOAD_COUNTER_ENABLE  | /* 传输数据量重载 */
                   AMHW_HC32_DMA_CHAN_INT_ERR_DISABLE        | /* 传输错误中断禁能 */
                   AMHW_HC32_DMA_CHAN_INT_TX_CMP_ENABLE      | /* 传输完成中断使能 */
                   AMHW_HC32_DMA_CHAN_CIRCULAR_MODE_DISABLE ;  /* 关闭循环模式 */

    /* DMA接收通道配置 */
    dma_flags[1] = AMHW_HC32_DMA_CHAN_TRANSFER_MODE_BLOCK    | /* SPI只有块传输模式 */
                   AMHW_HC32_DMA_CHAN_SIZE_8BIT              | /* 数据位宽 8bit */

                   AMHW_HC32_DMA_CHAN_SRC_ADD_INC_DISABLE    | /* 源地址不自增 */
                   AMHW_HC32_DMA_CHAN_RELOAD_SRC_ADD_ENABLE  | /* 源地址重载*/

                   AMHW_HC32_DMA_CHAN_RELOAD_DST_ADD_DISABLE | /* 目标地址不重载 */

                   AMHW_HC32_DMA_CHAN_RELOAD_COUNTER_ENABLE  | /* 传输数据量重载 */
                   AMHW_HC32_DMA_CHAN_INT_ERR_DISABLE        | /* 传输错误中断禁能 */
                   AMHW_HC32_DMA_CHAN_INT_TX_CMP_ENABLE      | /* 传输完成中断使能 */
                   AMHW_HC32_DMA_CHAN_CIRCULAR_MODE_DISABLE ;  /* 关闭循环模式 */

    /* 只发送不接收数据 */
    if (p_cur_trans->p_rxbuf == NULL) {

        /* 目标地址不自增 (接收数据buff地址不自增)*/;
        dma_flags[1] |= AMHW_HC32_DMA_CHAN_DST_ADD_INC_DISABLE;

        /* 建立接收通道描述符 */
        am_hc32_dma_xfer_desc_build(&(p_this->g_desc[1]),       /* 通道描述符 */
                                    (uint32_t)(&(p_hw_spi->data)),/* 源缓冲区首地址 */
                                    (uint32_t)(&tx_rx_trans),     /* 目的缓冲区首地址 */
                                     p_cur_trans->nbytes,         /* 传输字节数 */
                                     dma_flags[1]);               /* 传输配置 */

    /* 存在接收数据 */
    } else {

        /* 目标地址自增(接收数据buff地址自增) */
        dma_flags[1] |= AMHW_HC32_DMA_CHAN_DST_ADD_INC_ENABLE;

        /* 建立接收通道描述符 */ 
        am_hc32_dma_xfer_desc_build(&(p_this->g_desc[1]),          /* 通道描述符 */
                                    (uint32_t)(&(p_hw_spi->data)),   /* 源缓冲区首地址 */
                                    (uint32_t)(p_cur_trans->p_rxbuf),/* 目的缓冲区首地址 */
                                     p_cur_trans->nbytes,            /* 传输字节数 */
                                     dma_flags[1]);                  /* 传输配置 */
    }

    if (p_cur_trans->p_txbuf == NULL) {

        /* 源地址不自增(发送数据buff地址不自增) */
        dma_flags[0] |= AMHW_HC32_DMA_CHAN_SRC_ADD_INC_DISABLE;

        /* 建立发送通道描述符 */
        am_hc32_dma_xfer_desc_build(&(p_this->g_desc[0]),       /* 通道描述符 */
                                    (uint32_t)(&tx_rx_trans),          /* 源缓冲区首地址 */
                                    (uint32_t)(&(p_hw_spi->data)),/* 目的缓冲区首地址 */
                                    p_cur_trans->nbytes,          /* 传输字节数 */
                                    dma_flags[0]);                /* 传输配置 */
    } else {

        /* 源地址自增(发送数据buff地址自增) */
        dma_flags[0] |= AMHW_HC32_DMA_CHAN_SRC_ADD_INC_ENABLE;

        /* 建立发送通道描述符 */
        am_hc32_dma_xfer_desc_build(&(p_this->g_desc[0]),          /* 通道描述符 */
                                    (uint32_t)(p_cur_trans->p_txbuf),/* 源缓冲区首地址 */
                                    (uint32_t)(&(p_hw_spi->data)),   /* 目的缓冲区首地址 */
                                    p_cur_trans->nbytes,             /* 传输字节数 */
                                    dma_flags[0]);                   /* 传输配置 */
    }

    if (am_hc32_dma_xfer_desc_chan_cfg(&(p_this->g_desc[0]),
                                        AMHW_HC32_DMA_MER_TO_PER,  /* 内存到外设 */
                                        p_this->p_devinfo->dma_chan_tx) == AM_ERROR) {
        return AM_ERROR;
    }

    if (am_hc32_dma_xfer_desc_chan_cfg(&(p_this->g_desc[1]),
                                        AMHW_HC32_DMA_PER_TO_MER,  /* 外设到内存 */
                                        p_this->p_devinfo->dma_chan_rx) == AM_ERROR) {
        return AM_ERROR;
    }

    am_hc32_dma_priority_same();

    /* 设置每个DMA传输块大小为已开启的通道个数（1） */
    am_hc32_dma_block_data_size(p_this->p_devinfo->dma_chan_rx, 1);
    am_hc32_dma_block_data_size(p_this->p_devinfo->dma_chan_tx, 1);

    /* 设置DMA触发源*/
    if((p_devinfo->spi_reg_base) == HC32_SPI0_BASE) {
        am_hc32_dma_chan_src_set(p_this->p_devinfo->dma_chan_rx,
                                   HC32_DMA_SRC_TYPE_SPI0_RX);
        am_hc32_dma_chan_src_set(p_this->p_devinfo->dma_chan_tx,
                                   HC32_DMA_SRC_TYPE_SPI0_TX);

    } else if((p_devinfo->spi_reg_base) == HC32_SPI1_BASE) {

        am_hc32_dma_chan_src_set(p_this->p_devinfo->dma_chan_rx,
                                   HC32_DMA_SRC_TYPE_SPI1_RX);

        am_hc32_dma_chan_src_set(p_this->p_devinfo->dma_chan_tx,
                                   HC32_DMA_SRC_TYPE_SPI1_TX);
    }

    am_hc32_dma_chan_start(p_this->p_devinfo->dma_chan_rx);
    am_hc32_dma_chan_start(p_this->p_devinfo->dma_chan_tx);

    return AM_OK;
}

am_local
int __spi_config (am_hc32_spi_dma_dev_t *p_this)
{
    const am_hc32_spi_dma_devinfo_t *p_devinfo = p_this->p_devinfo;
    amhw_hc32_spi_t                 *p_hw_spi  = (amhw_hc32_spi_t *)(p_devinfo->spi_reg_base);
    am_spi_transfer_t                 *p_trans   = p_this->p_cur_trans;

    /* 如果为0，使用默认参数值 */
    if (p_trans->bits_per_word == 0) {
        p_trans->bits_per_word = p_this->p_cur_spi_dev->bits_per_word;
    }

    if (p_trans->speed_hz == 0) {
        p_trans->speed_hz = p_this->p_cur_spi_dev->max_speed_hz;
    }

    /* 设置字节数有效性检查 */
    if (p_trans->bits_per_word != 8) {
        return -AM_EINVAL;
    }

    /* 设置分频值有效性检查 */
    if (p_trans->speed_hz > __SPI_MAXSPEED_GET(p_hw_spi) ||
        p_trans->speed_hz < __SPI_MINSPEED_GET(p_hw_spi)) {
        return -AM_EINVAL;
    }

    /* 发送和接收缓冲区有效性检查 */
    if ((p_trans->p_txbuf == NULL) && (p_trans->p_rxbuf == NULL)) {
        return -AM_EINVAL;
    }

    /* 发送字节数检查 */
    if (p_trans->nbytes == 0) {
        return -AM_ELOW;
    }

    /* 配置SPI模式 */
    amhw_hc32_spi_clk_mode_set(p_hw_spi, p_this->p_cur_spi_dev->mode);

    /* 配置为主机模式 */
    amhw_hc32_spi_mode_sel(p_hw_spi, AMHW_HC32_SPI_MODE_TYPE_MASTER);

    /* 设置SPI速率 */
    __spi_speed_cfg(p_this, p_trans->speed_hz);

    return AM_OK;
}

am_local
uint32_t __spi_speed_cfg (am_hc32_spi_dma_dev_t *p_dev,
                          uint32_t                 target_speed)
{

    uint32_t clk, best_speed;  /* 计算出的速度 */
    uint8_t  i = 0;
    amhw_hc32_spi_baud_rate_t baud_div = AMHW_HC32_SPI_BAUD_RATE_PCLK_0;

    amhw_hc32_spi_t *p_hw_spi = (amhw_hc32_spi_t *)
                                  (p_dev->p_devinfo->spi_reg_base);

    if(target_speed == 0) {
        baud_div = AMHW_HC32_SPI_BAUD_RATE_PCLK_DIV2;
    } else {

        clk = am_clk_rate_get(p_dev->p_devinfo->clk_id);

        for(i = 1; i < 8; i++) {

            best_speed = clk >> i;
            if(best_speed <= target_speed) {
                break;
            }
        }
    }

    baud_div = (amhw_hc32_spi_baud_rate_t)(i - 1);

    amhw_hc32_spi_baud_rate_set(p_hw_spi, baud_div);

    best_speed = am_clk_rate_get(p_dev->p_devinfo->clk_id) /
                 (0x1ul << (baud_div + 1));

   return best_speed;
}
